Added complete page (modal) component, along with the rest of sections design completed

--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
+body{
+	overflow: hidden;
+}
 
 /* Animation classes for specific use case */
 .custom-pulse:hover {
